--- a/src/base/button.css
+++ b/src/base/button.css
@@ -181,13 +181,13 @@
   outline-offset: var(--sgds-outline-offset-focus);
 }
 
-.btn.disabled:not(.loading),
-.btn:disabled:not(.loading) {
+.btn.disabled,
+.btn:disabled {
   opacity: var(--sgds-opacity-40);
   cursor: not-allowed;
   color: var(--btn-color);
 }
-.btn.loading.disabled {
+.btn.loading {
   cursor: default;
 }
 
