--- a/src/components/Drawer/drawer.css
+++ b/src/components/Drawer/drawer.css
@@ -58,7 +58,7 @@
   bottom: auto;
   inset-inline-start: 0;
   width: 100%;
-  height: 80%;
+  height: 80vh;
   max-height: var(--sgds-dimension-512);
 }
 
@@ -68,7 +68,7 @@
   bottom: auto;
   inset-inline-start: auto;
   width: 80%;
-  height: 100%;
+  height: 100vh;
   max-width: var(--sgds-dimension-512);
 }
 
@@ -78,7 +78,7 @@
   bottom: 0;
   inset-inline-start: 0;
   width: 100%;
-  height: 80%;
+  height: 80vh;
   max-height: var(--sgds-dimension-512);
 }
 
@@ -88,7 +88,7 @@
   bottom: auto;
   inset-inline-start: 0;
   width: 80%;
-  height: 100%;
+  height: 100vh;
   max-width: var(--sgds-dimension-512);
 }
 
