--- a/src/components/Drawer/drawer.css
+++ b/src/components/Drawer/drawer.css
@@ -25,8 +25,8 @@
 .drawer {
   top: 0;
   inset-inline-start: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
   pointer-events: none;
   overflow: hidden;
 }
@@ -58,7 +58,7 @@
   bottom: auto;
   inset-inline-start: 0;
   width: 100%;
-  height: 80vh;
+  height: 80dvh;
   max-height: var(--sgds-dimension-512);
 }
 
@@ -68,7 +68,7 @@
   bottom: auto;
   inset-inline-start: auto;
   width: 80%;
-  height: 100vh;
+  height: 100dvh;
   max-width: var(--sgds-dimension-512);
 }
 
@@ -78,7 +78,7 @@
   bottom: 0;
   inset-inline-start: 0;
   width: 100%;
-  height: 80vh;
+  height: 80dvh;
   max-height: var(--sgds-dimension-512);
 }
 
@@ -88,7 +88,7 @@
   bottom: auto;
   inset-inline-start: 0;
   width: 80%;
-  height: 100vh;
+  height: 100dvh;
   max-width: var(--sgds-dimension-512);
 }
 
