--- a/src/components/Drawer/drawer.css
+++ b/src/components/Drawer/drawer.css
@@ -25,8 +25,8 @@
 .drawer {
   top: 0;
   inset-inline-start: 0;
-  width: 100dvw;
-  height: 100dvh;
+  width: 100%;
+  height: 100%;
   pointer-events: none;
   overflow: hidden;
 }
@@ -35,7 +35,6 @@
   position: fixed;
   z-index: 1100;
 }
-
 .drawer-panel {
   display: flex;
   flex-direction: column;
@@ -58,7 +57,7 @@
   bottom: auto;
   inset-inline-start: 0;
   width: 100%;
-  height: 80dvh;
+  height: 80%;
   max-height: var(--sgds-dimension-512);
 }
 
@@ -68,7 +67,7 @@
   bottom: auto;
   inset-inline-start: auto;
   width: 80%;
-  height: 100dvh;
+  height: 100%;
   max-width: var(--sgds-dimension-512);
 }
 
@@ -78,7 +77,7 @@
   bottom: 0;
   inset-inline-start: 0;
   width: 100%;
-  height: 80dvh;
+  height: 80%;
   max-height: var(--sgds-dimension-512);
 }
 
@@ -88,7 +87,7 @@
   bottom: auto;
   inset-inline-start: 0;
   width: 80%;
-  height: 100dvh;
+  height: 100%;
   max-width: var(--sgds-dimension-512);
 }
 
