--- a/src/components/AlertBanner/alert-banner.css
+++ b/src/components/AlertBanner/alert-banner.css
@@ -20,39 +20,46 @@
   display: flex;
   flex-direction: column;
   /* gap: var(--sgds-padding-sm); */
-  transition: transform 0.6s cubic-bezier(0.45, 0.05, 0.55, 0.95);
+  /* transition: transform 0.6s cubic-bezier(0.45, 0.05, 0.55, 0.95); */
     /* animation: loop 2s cubic-bezier(0.45,0.05,0.55,0.95) infinite; */
-    animation: scroll-up 20s cubic-bezier(0.45, 0.05, 0.55, 0.95) infinite;
+    animation: scroll-up 4s cubic-bezier(0.45, 0.05, 0.55, 0.95) infinite;
 }
 .content {
   flex: 1;
-
-  /* position:relative; */
+  display: flex;
+  flex-direction: column;
   height: 100px;
   overflow: hidden;
   position: relative;
   /* animation: loop 2s cubic-bezier(0.45,0.05,0.55,0.95) infinite; */
 }
+    /* @keyframes scroll-up {
+      0%   { transform: translateY(0%); }
+      50%  { transform: translateY(-100%); }
+      100%  { transform: translateY(-200%); }
+    } */
     @keyframes scroll-up {
       0%   { transform: translateY(0%); }
-      20%  { transform: translateY(0%); }
-      25%  { transform: translateY(-100%); }
-      45%  { transform: translateY(-100%); }
-      50%  { transform: translateY(-200%); }
-      70%  { transform: translateY(-200%); }
-      75%  { transform: translateY(-300%); }
-      95%  { transform: translateY(-300%); }
-      100% { transform: translateY(0%); }
+      100%  { transform: translateY(-200%); }
     }
+    /* @keyframes scroll-up {
+      0%   { transform: translateY(0%); }
+      100% { transform: translateY(-200%); }
+    } */
 
 .content:hover .looping-content {
   animation-play-state: paused;
 }
+.looping-content.duplicate {
+      transform: translateY(-300%);
+    /* animation-delay: 15s;  */
+}
 
 ::slotted(sgds-alert-banner-item) {
   flex: 0 0 100%;
-  animation-delay: 5s;
+  /* animation-delay: 5s; */
 }
+
 
 .pagination {
   display: flex;
