--- a/src/components/ComboBox/combo-box.css
+++ b/src/components/ComboBox/combo-box.css
@@ -28,7 +28,6 @@
 }
 
 .combobox .form-control-group {
-  padding: var(--sgds-form-padding-y) var(--sgds-form-padding-x);
   min-height: var(--sgds-dimension-48);
   min-width: var(--sgds-dimension-256);
   height: unset;
@@ -39,6 +38,8 @@
   gap: var(--sgds-gap-xs);
   flex-wrap: wrap;
   width: calc(100% - var(--sgds-icon-size-md, 1.25rem));
+  /* deduct 1px from top and bottom padding due to border */
+  padding: calc(var(--sgds-form-padding-y) - var(--sgds-form-border-width-default)) 0; 
 }
 .empty-menu {
   padding: var(--sgds-padding-sm) var(--sgds-padding-lg, 20px);
