--- a/src/components/AlertBanner/alert-banner.css
+++ b/src/components/AlertBanner/alert-banner.css
@@ -1,65 +1,48 @@
-.alert {
-  --sgds-alert-color: var(--sgds-color-fixed-light);
+ :host {
+      display: block; /* Ensure the host element behaves as a block for width calculations */
+    }
+
+.banner {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   gap: var(--sgds-gap-sm);
   background-color: var(--sgds-primary-surface-default);
-  color: var(--sgds-alert-color);
+  color: var(--sgds-color-fixed-light);
   padding: var(--sgds-padding-sm) var(--sgds-padding-2-xl);
 }
-
-.looping-content {
-  /* animation: loop 2s cubic-bezier(0.45,0.05,0.55,0.95) infinite; */
-  /* animation-delay: 5s; */
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  /* gap: var(--sgds-padding-sm); */
-  /* transition: transform 0.6s cubic-bezier(0.45, 0.05, 0.55, 0.95); */
-    /* animation: loop 2s cubic-bezier(0.45,0.05,0.55,0.95) infinite; */
-    animation: scroll-up 4s cubic-bezier(0.45, 0.05, 0.55, 0.95) infinite;
-}
+:host([variant="danger"]) .banner{
+  background-color: var(--sgds-danger-surface-default);
+} 
+:host([variant="neutral"]) .banner{
+  background-color: var(--sgds-surface-fixed-dark);
+} 
+:host([variant="warning"]) .banner {
+  background-color: var(--sgds-warning-surface-default);
+  color: var(--sgds-color-fixed-dark);
+} 
 .content {
   flex: 1;
-  display: flex;
-  flex-direction: column;
   height: 100px;
   overflow: hidden;
-  position: relative;
-  /* animation: loop 2s cubic-bezier(0.45,0.05,0.55,0.95) infinite; */
-}
-    /* @keyframes scroll-up {
-      0%   { transform: translateY(0%); }
-      50%  { transform: translateY(-100%); }
-      100%  { transform: translateY(-200%); }
-    } */
-    @keyframes scroll-up {
-      0%   { transform: translateY(0%); }
-      100%  { transform: translateY(-200%); }
-    }
-    /* @keyframes scroll-up {
-      0%   { transform: translateY(0%); }
-      100% { transform: translateY(-200%); }
-    } */
-
-.content:hover .looping-content {
-  animation-play-state: paused;
-}
-.looping-content.duplicate {
-      transform: translateY(-300%);
-    /* animation-delay: 15s;  */
+  width: 100%;
 }
 
 ::slotted(sgds-alert-banner-item) {
-  flex: 0 0 100%;
-  /* animation-delay: 5s; */
-}
+  display: none;
+  opacity: 0;
 
+ 
+}
+::slotted(*) {
+    flex: 0 0 100%;
+}
+::slotted(sgds-alert-banner-item[active]) {
+  display: block;
+  opacity: 1;
+   
+
+}
 
 .pagination {
   display: flex;
@@ -69,4 +52,8 @@
   font-weight: var(--sgds-font-weight-regular, 400);
   line-height: var(--sgds-line-height-16, 16px); /* 133.333% */
   letter-spacing: var(--sgds-letter-spacing-normal, 0);
+}
+
+.d-none {
+  display: none;
 }
