style(skeleton): apply max width to prevent skeleton overflow its parent container

--- a/src/components/Skeleton/skeleton.css
+++ b/src/components/Skeleton/skeleton.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   gap: var(--sgds-gap-xs);
   border-radius: var(--sgds-border-radius-sm);
+  max-width: 100%;
 }
 .skeleton.skeleton-paragraph {
   background-color: transparent;
