style(description list): apply max width on the label

--- a/src/components/DescriptionList/description-list.css
+++ b/src/components/DescriptionList/description-list.css
@@ -17,6 +17,10 @@
   flex: 1;
 }
 
+.label-container {
+  max-width: var(--sgds-dimension-280);
+}
+
 .label {
   color: var(--sgds-color-default);
   font-weight: var(--sgds-font-weight-semibold);
