style(icon list): update the text line height of different sizes

--- a/src/components/IconList/icon-list.css
+++ b/src/components/IconList/icon-list.css
@@ -12,8 +12,10 @@ slot::slotted(*){
 
 .sm {
   font-size: var(--sgds-font-size-1);
+  line-height: var(--sgds-line-height-20);
 }
 
 .lg {
-  font-size : var(--sgds-font-size-3)
+  font-size : var(--sgds-font-size-3);
+  line-height: var(--sgds-line-height-32);
 }
