--- a/src/components/SystemBanner/system-banner-item.css
+++ b/src/components/SystemBanner/system-banner-item.css
@@ -1,25 +1,16 @@
 :host{
 display: block;
-width: inherit;
-
-           
+width: inherit;     
 }
+
 :host([variant="warning"]) .banner-item {
   color: var(--sgds-color-fixed-dark);
 }
+
 .banner-item {
   display: flex;
   gap: var(--sgds-gap-sm);
-  padding: var(--sgds-padding-2-xs) 0;
   color: var(--sgds-color-fixed-light);
-}
-
-.title {
-  font-size: var(--sgds-font-size-2, 16px);
-  font-style: normal;
-  font-weight: var(--sgds-font-weight-semibold, 600);
-  line-height: var(--sgds-line-height-20, 20px); /* 125% */
-  letter-spacing: var(--sgds-letter-spacing-normal, 0);
 }
 
 .message {
@@ -28,8 +19,10 @@ width: inherit;
   font-weight: var(--sgds-font-weight-regular, 400);
   line-height: var(--sgds-line-height-20, 20px); /* 142.857% */
   letter-spacing: var(--sgds-letter-spacing-normal, 0);
+  padding-right: var(--sgds-padding-2-xl);
   display: -webkit-box;
-  -webkit-line-clamp: 2; 
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -45,31 +38,18 @@ width: inherit;
   gap: var(--sgds-gap-2-xs, 4px);
   align-items: center;
 }
-.content-top {
-  display: flex;
-  padding: var(--sgds-padding-3-xs, 2px) 0;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: var(--sgds-gap-2-xs, 4px);
-}
-.content {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: var(--sgds-gap-sm, 12px);
-  max-width: var(--sgds-dimension-872);
-}
 
 slot[name="action"]::slotted(a) {
   --action-color: var(--sgds-color-fixed-light);
   text-decoration: none !important;
   color: var(--action-color) !important;
-  font-size: var(--sgds-font-size-1, 14px);
+  font-size: var(--sgds-font-size-1, 14px) !important;
   font-style: normal;
   font-weight: var(--sgds-font-weight-regular, 400);
   line-height: var(--sgds-line-height-20, 20px); /* 142.857% */
   letter-spacing: var(--sgds-letter-spacing-normal, 0);
 }
+
 :host([variant="warning"]) slot[name="action"]::slotted(a) {
   --action-color: var(--sgds-color-fixed-dark);
 }
