--- a/src/components/SystemBanner/system-banner.css
+++ b/src/components/SystemBanner/system-banner.css
@@ -1,6 +1,3 @@
-:host {
-  display: block; /* Ensure the host element behaves as a block for width calculations */
-}
 
 .banner {
   display: flex;
@@ -11,6 +8,7 @@
   min-height: var(--sgds-dimension-64);
   color: var(--sgds-color-fixed-light);
   padding: var(--sgds-padding-sm) var(--sgds-padding-2-xl);
+  position: relative;
 }
 
 :host([variant="danger"]) .banner {
@@ -51,8 +49,25 @@
   font-weight: var(--sgds-font-weight-regular, 400);
   line-height: var(--sgds-line-height-16, 16px); /* 133.333% */
   letter-spacing: var(--sgds-letter-spacing-normal, 0);
+  position: absolute;
+  bottom: 12px;
+  right: 20px;
 }
 
 .d-none {
   display: none;
+}
+sgds-close-button {
+  position: absolute;
+  right: 20px;
+  top: 10px;
+}
+
+@media (min-width: 512px) {
+  sgds-close-button {
+    position: static;
+  }
+  .pagination {
+    position: static;
+  }
 }
