--- a/src/components/SystemBanner/system-banner-item.css
+++ b/src/components/SystemBanner/system-banner-item.css
@@ -1,6 +1,6 @@
-:host{
-display: block;
-width: inherit;     
+:host {
+  display: block;
+  width: inherit;
 }
 
 :host([variant="warning"]) .banner-item {
@@ -11,7 +11,7 @@ width: inherit;
   display: flex;
   gap: var(--sgds-gap-sm);
   color: var(--sgds-color-fixed-light);
-  padding: var(--sgds-padding-2-xs) 0
+  padding: var(--sgds-padding-2-xs) 0;
 }
 
 .message {
@@ -20,19 +20,19 @@ width: inherit;
   font-weight: var(--sgds-font-weight-regular, 400);
   line-height: var(--sgds-line-height-20, 20px); /* 142.857% */
   letter-spacing: var(--sgds-letter-spacing-normal, 0);
-  padding-right: var(--sgds-padding-2-xl);
   display: -webkit-box;
   line-clamp: 2;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  
-  text-overflow: ellipsis;
-    overflow: hidden;
+  overflow: hidden;
   /* max-height: 40px;
 
   padding-right: 50px;
   position: relative; */
 }
+.message.truncated {
+  padding-right: 70.57px;
+  }
 /* .show-more {
   position: absolute;
   right: 0;
@@ -46,10 +46,28 @@ white-space: nowrap;
 
 
 } */
-.ellipsis{
-  color: white;
+
+.clamped-container {
+  position: relative;
+  display: inline-block;
+  max-width: var(--sgds-dimension-872);
+
 }
 
+.inline-link {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  white-space: nowrap;
+  cursor: pointer;
+  /* background: linear-gradient(to right, transparent, white 60%); */
+  font-size: var(--sgds-font-size-1, 14px);
+  font-style: normal;
+  font-weight: var(--sgds-font-weight-regular, 400);
+  line-height: var(--sgds-line-height-20, 20px); /* 142.857% */
+  letter-spacing: var(--sgds-letter-spacing-normal, 0);
+  text-decoration: underline;  
+}
 .action {
   font-size: var(--sgds-font-size-1, 14px);
   font-style: normal;
@@ -77,7 +95,6 @@ slot[name="action"]::slotted(a) {
   --action-color: var(--sgds-color-fixed-dark);
 }
 
-
 .banner-item__message_and__action {
   display: flex;
   flex-direction: column;
@@ -86,10 +103,9 @@ slot[name="action"]::slotted(a) {
 @media (min-width: 512px) {
   .banner-item__message_and__action {
     flex-direction: row;
-    gap: var(--sgds-gap-sm);
+    gap: calc(var(--sgds-gap-sm) + var(--sgds-padding-2-xl));
   }
   .action {
     margin-top: 0;
   }
-} 
-
+}
