feat(SystemBannerItem): give action div a height to ensure bottom half in mobile layout stays

--- a/src/components/SystemBanner/system-banner-item.css
+++ b/src/components/SystemBanner/system-banner-item.css
@@ -77,6 +77,8 @@
   align-items: center;
   margin-top: 6px;
   white-space: nowrap;
+  /** even if no action is slotted, the container needs a height in mobile **/
+  min-height: var(--sgds-line-height-20); 
 }
 
 slot[name="action"]::slotted(a) {
