chore(ComboBox): updated the way the click is handled for each option and clean up code

--- a/src/styles/form-text-control.css
+++ b/src/styles/form-text-control.css
@@ -42,7 +42,7 @@
 
 .form-clearable {
   cursor: pointer;
-  color: var(--sgds-neutral-color-default);
+  color: var(--sgds-color-subtle);
 }
 
 @media (prefers-reduced-motion: reduce) {
