--- a/src/components/SystemBanner/system-banner-item.css
+++ b/src/components/SystemBanner/system-banner-item.css
@@ -6,24 +6,6 @@
   font-weight: var(--sgds-font-weight-regular, 400);
   line-height: var(--sgds-line-height-20, 20px); /* 142.857% */
   letter-spacing: var(--sgds-letter-spacing-normal, 0);
-   --bg-color: var(--sgds-primary-surface-default);
-
-}
-
-:host([variant="danger"]) {
-  --bg-color: var(--sgds-danger-surface-default);
-}
-
-:host([variant="neutral"]) {
-  --bg-color: var(--sgds-surface-fixed-dark);
-}
-
-:host([variant="warning"]) {
-  --bg-color: var(--sgds-warning-surface-default);
-}
-
-:host([variant="warning"]) .banner-item {
-  color: var(--sgds-color-fixed-dark);
 }
 
 .banner-item {
@@ -35,12 +17,12 @@
 
 .message {
   display: -webkit-box;
-  line-clamp: 2;
-  -webkit-line-clamp: 2;
+  line-clamp: 5;
+  -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
   overflow: hidden;
   word-break: break-all;
-  max-height: calc(2 * var(--sgds-line-height-20, 20px)); /* 2 lines */
+  max-height: calc(5 * var(--sgds-line-height-20, 20px)); /* 5 lines */
 }
 
 .message.truncated::after {
@@ -51,7 +33,7 @@
   right: 0;
   width: 10ch;
   height: var(--sgds-line-height-20, 20px);
-  background-color: var(--bg-color);
+  background-color: var(--sgds-surface-fixed-dark);
 }
 
 .clamped-container {
@@ -77,19 +59,16 @@
   align-items: center;
   margin-top: 6px;
   white-space: nowrap;
+}
+.action.mh-20 {
   /** even if no action is slotted, the container needs a height in mobile **/
-  min-height: var(--sgds-line-height-20); 
+  min-height: var(--sgds-line-height-20);
 }
 
 slot[name="action"]::slotted(a) {
-  --action-color: var(--sgds-color-fixed-light);
   text-decoration: none !important;
-  color: var(--action-color) !important;
+  color: var(--sgds-color-fixed-light) !important;
   font-size: var(--sgds-font-size-1, 14px) !important;
-}
-
-:host([variant="warning"]) slot[name="action"]::slotted(a) {
-  --action-color: var(--sgds-color-fixed-dark);
 }
 
 .banner-item__message_and__action {
@@ -106,5 +85,14 @@ slot[name="action"]::slotted(a) {
   }
   .action {
     margin-top: 0;
+  }
+  .message {
+    display: -webkit-box;
+    line-clamp: 2;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    word-break: break-all;
+    max-height: calc(2 * var(--sgds-line-height-20, 20px)); /* 3 lines */
   }
 }
