--- a/src/components/CloseButton/close-button.css
+++ b/src/components/CloseButton/close-button.css
@@ -31,13 +31,20 @@
   align-items: center;
 }
 
-.btn-close:hover {
-  background-color: var(--sgds-bg-translucent);
-}
-
+.btn-close:hover,
 .btn-close:focus,
 .btn-close:focus-visible {
   background-color: var(--sgds-bg-translucent);
+}
+:host([tone="fixed-light"]) .btn-close:hover,
+:host([tone="fixed-light"]) .btn-close:focus,
+:host([tone="fixed-light"]) .btn-close:focus-visible {
+  background-color: var(--sgds-bg-translucent-fixed-light);
+}
+:host([tone="fixed-dark"]) .btn-close:hover,
+:host([tone="fixed-dark"]) .btn-close:focus,
+:host([tone="fixed-dark"]) .btn-close:focus-visible {
+  background-color: var(--sgds-bg-translucent-fixed-dark);
 }
 
 .btn-close:focus-visible {
