--- a/src/components/SystemBanner/system-banner-item.css
+++ b/src/components/SystemBanner/system-banner-item.css
@@ -72,16 +72,21 @@ slot[name="action"]::slotted(a) {
   display: flex;
   flex-direction: column;
   gap: var(--sgds-gap-xs);
+  flex: 1 0 0;
+  /* padding-right prevents overlap of long message with close button */
   padding-right: var(--sgds-padding-2-xl);
-}
 
+}
+/* DESKTOP */
 @media (min-width: 512px) {
   .banner-item__message_and__action {
     flex-direction: row;
     gap: calc(var(--sgds-gap-sm) + var(--sgds-padding-2-xl));
+    padding-right: unset;
   }
   .action {
     margin-top: 0;
+    margin-left: auto;
   }
   .message {
     display: -webkit-box;
