fix(subnav): hide the container of actions slot when the slot is empty

--- a/src/components/Subnav/subnav.css
+++ b/src/components/Subnav/subnav.css
@@ -78,6 +78,10 @@ slot[name="header"]::slotted(*) {
   width: 100%;
 }
 
+.no-actions {
+  display: none;
+}
+
 slot[name="actions"]::slotted(*) {
   width: 100%;
 }
